--- a/helm/easybank-services/gatewayserver/values.yaml
+++ b/helm/easybank-services/gatewayserver/values.yaml
@@ -22,3 +22,12 @@ eureka_enabled: true
 resource_enabled: true
 otel_enabled: true
 kafka_enabled: false
+
+
+datasource_enabled: false
+datasource_root_password: root
+database_enabled: false
+mysqlDatabase: cardsdb
+springDatasourceUsername: root
+springDatasourcePassword:  root
+datasourceUrl: jdbc:mysql://cardsdb:3306
