--- a/helm/easybank-services/loans/values.yaml
+++ b/helm/easybank-services/loans/values.yaml
@@ -22,3 +22,13 @@ eureka_enabled: true
 resource_enabled: false
 otel_enabled: true
 kafka_enabled: false
+
+
+
+datasource_enabled: true
+datasource_root_password: root
+database_enabled: false
+mysqlDatabase: loansdb
+springDatasourceUsername: root
+springDatasourcePassword:  root
+datasourceUrl: jdbc:mysql://loansdb:3307/loansdb
