--- a/helm/environments/prod-env/values.yaml
+++ b/helm/environments/prod-env/values.yaml
@@ -1,6 +1,6 @@
 global:
   configMapName: easybankdev-configmap
-  activateProfile: prod
+  activeProfile: prod
   configServerURL: configserver:http://configserver:8071/
   eurekaServerURL: http://eurekaserver:8070/eureka
   keyCloakURL: http://keycloak.default.svc.cluster.local:80/realms/master/protocol/openid-connect/certs
@@ -8,3 +8,4 @@ global:
   otelExporterEndPoint: http://tempo-grafana-tempo-distributor:4317
   otelMetricsExporter: none
   kafkaBrokerURL: kafka-controller-0.kafka-controller-headless.default.svc.cluster.local:9092
+  rabbitmqHost: rabbitmq.default.svc.cluster.local
