--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -320,7 +320,7 @@ services:
       SPRING_RABBITMQ_HOST: "rabbit"
       SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "kafka:9092"
     depends_on:
-      cardsdb:
+      accountsdb:
         condition: service_healthy
 
   accounts2:
@@ -349,7 +349,7 @@ services:
       SPRING_RABBITMQ_HOST: "rabbit"
       SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "kafka:9092"
     depends_on:
-      cardsdb:
+      accountsdb:
         condition: service_healthy
 
   loansdb:
