--- a/helm/easybank-services/accounts/Chart.yaml
+++ b/helm/easybank-services/accounts/Chart.yaml
@@ -27,3 +27,7 @@ dependencies:
   - name: easybank-common
     version: 0.1.0
     repository: file://../../easybank-common
+
+  - name: accountsdb
+    version: 0.1.0
+    repository: file://../accountsdb
