--- a/helm/easybank-services/loans/Chart.yaml
+++ b/helm/easybank-services/loans/Chart.yaml
@@ -27,3 +27,7 @@ dependencies:
   - name: easybank-common
     version: 0.1.0
     repository: file://../../easybank-common
+
+  - name: loansdb
+    version: 0.1.0
+    repository: file://../loansdb
